# termslime

./: LICENSE  README.md  pyproject.toml
termslime/: __main__.py
